<?xml version="1.0"?>
<package>



  <name>dji_vision_detection</name>
  <version>1.0.0</version>
  <description>Additional filter for aruco_mapping package </description>

  <maintainer email="janbacik@smartroboticsys.eu">Jan Bacik</maintainer>
  <license>BSD</license>
  <url type="website">http://www.smartroboticsys.eu/</url>
  <author email="jan.bacik@smartroboticsys.eu">Jan Bacik</author>  
  
  <buildtool_depend>catkin</buildtool_depend>
    
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>eigen_conversions</build_depend>

  <run_depend>eigen_conversions</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>
